Mobile fixes - check your answers

--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -98,7 +98,7 @@
 
 
 
-    <h2 class="govuk-heading-m" style="float: left;">Livestock information</h2>
+    <h2 class="govuk-heading-m" >Livestock information</h2>
     <p class="govuk-body" style="float: right;"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> land details</span></a>
     </p>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
