--- a/app/views/fetf/application/v1-0/business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/business-details/check-your-details.html
@@ -22,7 +22,7 @@
 
     <!-- <p class="govuk-body">Changes in this section will update your Rural Payments service account.</p> -->
 
-    <h2 class="govuk-heading-m" style="float: left;">Business structure</h2>
+    <h2 class="govuk-heading-m">Business structure</h2>
     <p class="govuk-body" style="float: right;"><a class="govuk-link" href="/fetf/application/v1-0/business-details/business-structure">Change<span class="govuk-visually-hidden"> business structure</span></a>
     </p>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -47,7 +47,7 @@
     </dl>
 
 
-    <h2 class="govuk-heading-m" style="float: left;">Land details</h2>
+    <h2 class="govuk-heading-m">Land details</h2>
     <p class="govuk-body" style="float: right;"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> land details</span></a>
     </p>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -80,7 +80,7 @@
 
 
 
-    <h2 class="govuk-heading-m" style="float: left;">Farm assurance schemes</h2>
+    <h2 class="govuk-heading-m" >Farm assurance schemes</h2>
     <p class="govuk-body" style="float: right;"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> farm assurance schemes</span></a>
     </p>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -96,7 +96,7 @@
 
 
 
-    <h2 class="govuk-heading-m" style="float: left;">Livestock health schemes</h2>
+    <h2 class="govuk-heading-m">Livestock health schemes</h2>
     <p class="govuk-body" style="float: right;"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> livestock health schemes</span></a>
     </p>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
