--- a/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
+++ b/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2024-grant.html
@@ -45,11 +45,14 @@
 
 <br><br><br>
 
+
+
+
 <style>
   .blue-box {
     background-color: #1D70B8; /* Blue color */
-    height: 240px; /* Adjust the height as needed */
-    width: 900px; 
+    height: fit-content; /* Adjust the height as needed */
+    width: full-width; 
     color: white; /* Text color */
     padding: 30px; /* Spacing around the text */
   }
@@ -69,6 +72,14 @@
 </div>
 
 </body>
+
+
+
+
+
+
+
+
 
 <br><br>
 
