--- a/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
@@ -26,7 +26,7 @@
     
     <p class="govuk-body">These are the applicant and business details. To make changes <a class="govuk-link" href="#">go to the Rural Payments service</a>.</p>
 
-    <h2 class="govuk-heading-m" style="float: left;">Applicant details</h2>
+    <h2 class="govuk-heading-m">Applicant details</h2>
     
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -64,7 +64,7 @@
     </dl>
 
 
-    <h2 class="govuk-heading-m" style="float: left;">Business details</h2>
+    <h2 class="govuk-heading-m">Business details</h2>
     
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
