Emails go to login page before the task list

--- a/app/views/fetf/application/v1-0/business-details/farm-assurance.html
+++ b/app/views/fetf/application/v1-0/business-details/farm-assurance.html
@@ -92,11 +92,12 @@
 
       </div>
 
-
+      <div class="govuk-button-group">
     <button type="submit" class="govuk-button" data-module="govuk-button">
       Save and continue
     </button>
-
+    <a  class="govuk-link" href="#">Skip</a>
+</div>
     </form>
 
   </div>
