--- a/app/views/fetf/application/v1-0/business-details/land-details.html
+++ b/app/views/fetf/application/v1-0/business-details/land-details.html
@@ -31,7 +31,7 @@
             </h1>
           </legend>
           <div id="contact-hint" class="govuk-hint">
-            Select all that apply. Enter approximate hectares in whole number.
+            Select all that apply. Enter approximate hectares in whole numbers.
           </div>
           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
