--- a/app/views/fetf/application/v1-0/business-details/livestock-schemes.html
+++ b/app/views/fetf/application/v1-0/business-details/livestock-schemes.html
@@ -36,11 +36,12 @@
         <a href="#" class="govuk-link">Add another scheme</a>
       </div>
 
-
+      <div class="govuk-button-group">
     <button type="submit" class="govuk-button" data-module="govuk-button">
       Save and continue
     </button>
     <a  class="govuk-link" href="#">Skip</a>
+    </div>
 
     </form>
 
