--- a/app/views/fetf/application/v1-0/submit-application/confirmation.html
+++ b/app/views/fetf/application/v1-0/submit-application/confirmation.html
@@ -69,8 +69,8 @@
         
         <h2 class="govuk-heading-m">What happens next</h2>
         <p class="govuk-body">
-          The RPA aims to process complete applications within 60 working days.<br><br>
-          The RPA will be in touch when they have assessed your full application. They will tell you if your project scored well enough to receive grant funding.<br><br>The RPA will assess your application against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.<br><br>If your application is successful, you’ll be sent a grant funding agreement and can begin work on the project.<br><br>
+          The RPA aims to process applications within 6 weeks of the application window closing.<br><br>
+          The RPA will be in touch when they have assessed your application. They will tell you if your project scored well enough to receive grant funding.<br><br>The RPA will assess your application against other projects. You will not automatically get a grant, as the grant is expected to be highly competitive.<br><br>If your application is successful, you’ll be sent a grant funding agreement.<br><br>
         </p>
 
        
