--- a/app/views/fetf/application/v1-0/submit-application/email-application-approved.html
+++ b/app/views/fetf/application/v1-0/submit-application/email-application-approved.html
@@ -159,7 +159,7 @@
             <p>Your grant funding agreement is ready for you to read and accept.</p>
             <p>You must read and accept the agreement by 11:59pm on <strong>16 August 2024 </strong>or the
               offer will expire and we cannot award you a grant.</p>
-            <p> <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a></p>
+            <p> <a class="govuk-link" href="../submit-application/login.html">Read and accept your grant funding agreement</a></p>
             <p>Once you’ve reviewed and accepted your agreement, you can download a copy for
               your own records.</p>
              
@@ -217,9 +217,7 @@ for the Farming Equipment and Technology Fund scheme.<br>
 
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
-            <p class="govuk-body">
-              <a href="../../../activity-list/v2-0/index?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01">Go back to the task list</a></p>
-             </p>
+            
 
       </td>
       <td width="10" valign="middle"><br /></td>
