--- a/app/views/fetf/activity-list/v2-0/email-submit-claim.html
+++ b/app/views/fetf/activity-list/v2-0/email-submit-claim.html
@@ -164,7 +164,7 @@
                 cross out other transactions)</li>
               <li>is in place and operational (for example, photos, videos)</li>
             </ul>
-            <p>When you have all your evidence, <a href="/_common/not-testing.html">submit your claim and evidence</a>.</p>
+            <p>When you have all your evidence, <a class="govuk-link" href="../../activity-list/v2-0/login.html">submit your claim and evidence</a>.</p>
              
              
 
@@ -226,7 +226,7 @@
 
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Yours sincerely,</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Rural Payments Agency</p>
-            <p class="govuk-body withdraw-link"><a href="../../activity-list/v2-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a">Back to task list</a></p>
+          
 						
 
       </td>
