--- a/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
@@ -24,7 +24,7 @@
     <!-- <p class="govuk-body">Changes in this section will update your Rural Payments service account.</p> -->
 
     
-    <p class="govuk-body">These are the applicant and business details. To make changes <a class="govuk-link" href="#">go to the Rural Payments service</a>.</p>
+    <p class="govuk-body">To change these details, <a class="govuk-link" href="#">go to the Rural Payments service</a>.</p>
 
     <h2 class="govuk-heading-m">Applicant details</h2>
     
