Claims task list status updates based on item

--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -456,12 +456,12 @@ function showVisualEvidenceSection() {
 
 
 
-
-     <a href="/fetf/claim/v1-0/upload?01=c">
+<form action="/fetf/set-status" method="post">
+  <input type="hidden" name="termName" value="{{ item.termName }}">
         <button class="govuk-button">
           Save and continue
         </button>
-      </a>
+    </form>
 
 
 
