--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -51,35 +51,29 @@
                    
                   </div>
                   
-                  {% if (data['01'] == "n") %}
+                  {% if item.status == "Completed" %}
 
-               
+                  <div class="govuk-task-list__status" id="before-you-start-1-status">
+                    Completed
+                  </div>
+
+                  {% else %}
 
                   <div class="govuk-task-list__status" id="application-details-4-status">
                     <strong class="govuk-tag govuk-tag--blue">
                       Not yet started
                     </strong>
                 </div>
+                {% endif %}
 
-                {% elif (data['01'] == "i") %}
+            
 
-                <div class="govuk-task-list__status" id="application-details-4-status">
+                <!-- <div class="govuk-task-list__status" id="application-details-4-status">
                   <strong class="govuk-tag govuk-tag--light-blue">
                     In progress
                   </strong>
-              </div>
-              {% elif (data['01'] == "c") %}
-
-
-                  <div class="govuk-task-list__status" id="before-you-start-1-status">
-                    Completed
-                  </div>
-                </li>
-
-                {% endif %}
-
-
-
+              </div> -->
+             
                 {% endfor %}
                 
               </ul>
