Email goes to login

--- a/app/views/fetf/agreement/v1-3/email-agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-3/email-agreement-accepted.html
@@ -170,7 +170,7 @@ items and submit your claim.
                 cross out other transactions)</li>
               <li>is in place and operational (for example, photos, videos)</li>
             </ul>
-            <p>When you have all your evidence, <a href="/_common/not-testing.html">submit your claim and evidence</a>.</p>
+            <p>When you have all your evidence, <a class="govuk-link" href="../../activity-list/v2-0/login.html">submit your claim and evidence</a>.</p>
              
              
 
