--- a/app/views/fetf/_includes/body-content_agreement-accepted-main-block.html
+++ b/app/views/fetf/_includes/body-content_agreement-accepted-main-block.html
@@ -22,26 +22,25 @@
 
 <span class="content-section">
   <h2 class="govuk-heading-m">Site visits</h2>
-  <p class="govuk-body">The location of the item(s) will be at <strong>
+  <p class="govuk-body">The location of the item(s) will be at 
   {% if data['addressPostcode'] %}
-        {{ data['addressPostcode'] }}
-
-{% else %}
-GL1 2UE
-{% endif %}
-</strong>, as set out in your application. We may carry out a site visit at any time, either before and/or after the claim is paid, and up to 5 years following payment of the grant.</p>
+  <strong>{{ data['addressPostcode'] }}</strong>,
+  {% else %}
+  <strong>GL1 2UE</strong>,
+  {% endif %}
+as set out in your application. We may carry out a site visit at any time, either before and/or after the claim is paid, and up to 5 years following payment of the grant.</p>
 </span>
 
 
 <span class="content-section">
-<h2 class="govuk-heading-m">Questions about your agreement</h2>
-<p class="govuk-body">If you have any questions about your agreement, call the RPA and follow the options for the Farming Equipment and Technology Fund scheme.</p>
+<h2 class="govuk-heading-m">If you have any questions</h2>
+<p class="govuk-body">If you have any questions, call the RPA and follow the options for the Farming Equipment and Technology Fund scheme.</p>
 <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)</p>
 <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FETFClaims@rpa.gov.uk">FETFClaims@rpa.gov.uk</a></p>
 </span>
 
 
 <span class="content-section">
-<h2 class="govuk-heading-m">Withdrawing your agreement</h2>
-<p class="govuk-body">If you do not want the grant funding, you can <a href="">withdraw your application</a> before you make a claim.</p>
+<h2 class="govuk-heading-m">Withdrawing your application</h2>
+<p class="govuk-body">If you no longer want the grant funding, you can <a href="">withdraw your application</a> before you make a claim.</p>
 </span>
