--- a/app/views/fetf/activity-list/v2-0/email-submit-claim.html
+++ b/app/views/fetf/activity-list/v2-0/email-submit-claim.html
@@ -156,7 +156,7 @@
 
             <strong>What you need to do</strong><br>
 
-            <p>You need to <a href="/_common/not-testing.html">check what evidence you must provide with your claim</a>.</p>
+            <p>You should read <a href="/_common/not-testing.html">Claim your Farming and Technology Equipment Fund (FETF) 2024 grant payment (opens in new tab)</a>. It explains how to submit a Farming Equipment and Technology Fund claim.</p>
             <p>You need evidence that each item you are claiming for:</p>
             <ul>
               <li>has been purchased (for example, invoices)</li>
@@ -188,7 +188,7 @@
 
               <strong>Withdrawing your application</strong><br><br>
               
-              If you do not want the grant funding, you can <a href="/_common/not-testing.html">withdraw your application.</a><br>
+              If you no longer want the grant funding, you can <a href="/_common/not-testing.html">withdraw your application.</a><br>
               
 
               <hr style="margin: 30px 0;">
