--- a/app/views/fetf/application/v1-0/submit-application/email-application-approved.html
+++ b/app/views/fetf/application/v1-0/submit-application/email-application-approved.html
@@ -187,9 +187,9 @@
 
 
               <div class="govuk-details__text">
-                <strong>If you have questions about your application</strong><br><br>
+                <strong>If you have questions</strong><br><br>
                 
-                If you have any questions about your application, call the RPA and follow the options
+                If you have any questions, call the RPA and follow the options
 for the Farming Equipment and Technology Fund scheme.<br>
   
 
