--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -73,7 +73,7 @@ Upload1
       <p class="govuk-body">To make a claim, you must provide evidence that each item you are claming for:
         <ul class="govuk-list govuk-list--bullet">
           <li>has been purchased (for example, invoices)</li>
-          <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
+          <li>has been paid for in full (for example, receipts and bank statements – you can cross out other transactions)</li>
           <li>is in place and opertational (for example, photos, videos)</li>
         </ul>
       </p>
