--- a/app/views/fetf/claim/v1-0/confirmation.html
+++ b/app/views/fetf/claim/v1-0/confirmation.html
@@ -30,7 +30,7 @@
               Claim submitted
             </h1>
           <div class="govuk-panel__body">
-            Your reference number<br><strong>HDJ2123F</strong>
+            Your reference number<br><strong>SJV1629G</strong>
           </div>
         </div>
         
@@ -66,9 +66,9 @@
         
         <h2 class="govuk-heading-m">What happens next</h2>
         <p class="govuk-body">
-          We will assess your claim and let you know if we need any further information.<br><br>
-          We aim to process claims within 30 working days.<br><br>
-          You will get a notification when your claim is approved and paid.<br>
+          The RPA will assess your claim and let you know if we need any further information.<br><br>
+          The RPA aims to process claims within 30 working days.<br><br>
+          You will get a notification when your claim is approved.<br>
         </p>
 
         <br>
