--- a/app/views/fetf/claim/v1-0/email-submitted.html
+++ b/app/views/fetf/claim/v1-0/email-submitted.html
@@ -149,7 +149,7 @@
             <p>We have received your claim.</p>
             <p>We will assess your claim and let you know if we need any further information.</p>
             <p>We aim to process claims within 30 working days.</p>
-            <p>You will get a notification when your claim is approved and paid.</p>
+            <p>You will get a notification when your claim is approved.</p>
 
 						
       
