--- a/app/views/fetf/application/v1-0/business-details/land-details.html
+++ b/app/views/fetf/application/v1-0/business-details/land-details.html
@@ -31,7 +31,7 @@
             </h1>
           </legend>
           <div id="contact-hint" class="govuk-hint">
-            Select all that apply. Enter approximate hectares in whole numbers.
+            Select all that apply. Enter approximate hectares in whole number.
           </div>
           <div class="govuk-checkboxes" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
@@ -61,7 +61,7 @@
                 <label class="govuk-label" for="contact-by-phone">
                   Area of nursery
                 </label>
-                <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="agriculture-hectares" name="agricultureHectares" type="text" spellcheck="false" inputmode="numeric">
+                <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="horticulture-hectares" name="horticultureHectares" type="text" spellcheck="false" inputmode="numeric">
                   <div class="govuk-input__suffix" aria-hidden="true">hectares</div>
                 </div>
               </div>
@@ -77,7 +77,7 @@
                 <label class="govuk-label" for="contact-by-text">
                   Area of woodland
                 </label>
-                <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="agriculture-hectares" name="agricultureHectares" type="text" spellcheck="false" inputmode="numeric">
+                <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="forestry-hectares" name="forestryHectares" type="text" spellcheck="false" inputmode="numeric">
                   <div class="govuk-input__suffix" aria-hidden="true">hectares</div>
                 </div>
                 <br>
@@ -89,7 +89,7 @@
                 <label class="govuk-label" for="width-4">
                   Enter relevant land parcel IDs, for example 3903
                 </label>
-                <input class="govuk-input govuk-input--width-4" id="width-4" name="width4" type="text">
+                <input class="govuk-input govuk-input--width-4" id="landParcelId" name="landParcelId" type="text">
                 
               </div>
               </div>
