--- a/app/views/fetf/application/v1-0/business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/business-details/check-your-details.html
@@ -75,6 +75,15 @@
          {{ data['forestryHectares'] }}
         </dd>
       </div>
+      
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+         Land parcel ID for forestry
+        </dt>
+        <dd class="govuk-summary-list__value">
+         {{ data['landParcelId'] }}
+        </dd>
+      </div>
     </dl>
 
 
