Check your answers

--- a/app/views/fetf/application/v1-0/business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/business-details/check-your-details.html
@@ -81,7 +81,7 @@
          Land parcel ID for forestry
         </dt>
         <dd class="govuk-summary-list__value">
-         {{ data['landParcelId'] }}
+         {{ data['landParcelId']  or "Not applicable" }}
         </dd>
       </div>
     </dl>
