--- a/app/views/fetf/application/v1-0/about-items/equipment-contractor-details.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-contractor-details.html
@@ -49,7 +49,7 @@
             <div class="govuk-radios" data-module="govuk-radios">
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
+                <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="Yes" data-aria-controls="conditional-contact-2">
                 <label class="govuk-label govuk-radios__label" for="contact-2">
                   Yes
                 </label>
@@ -65,7 +65,7 @@
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" data-aria-controls="conditional-contact">
+                <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="No" data-aria-controls="conditional-contact">
                 <label class="govuk-label govuk-radios__label" for="contact">
                   No
                 </label>
