--- a/app/views/fetf/application/v1-0/about-items/equipment-contractor-details.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-contractor-details.html
@@ -49,15 +49,15 @@
             <div class="govuk-radios" data-module="govuk-radios">
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="Yes" data-aria-controls="conditional-contact-2">
-                <label class="govuk-label govuk-radios__label" for="contact-2">
+                <input class="govuk-radios__input" id="contractor-yes" name="contractor" type="radio" value="Yes" data-aria-controls="conditional-contractor-yes">
+                <label class="govuk-label govuk-radios__label" for="contractor-yes">
                   Yes
                 </label>
               </div>
 
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-2">
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contractor-yes">
                 <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-phone">
+                  <label class="govuk-label" for="cconditional-contractor-yes">
                     Name of professional organisation
                   </label>
                   <input class="govuk-input govuk-input--width-100" id="contracting-professional-organisation" name="contractingProfessionalOrganisation" type="text">
@@ -65,8 +65,8 @@
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="No" data-aria-controls="conditional-contact">
-                <label class="govuk-label govuk-radios__label" for="contact">
+                <input class="govuk-radios__input" id="contractor-no" name="contractor" type="radio" value="No" data-aria-controls="conditional-contractor-np">
+                <label class="govuk-label govuk-radios__label" for="contractor-no">
                   No
                 </label>
               </div>
