--- a/app/views/fetf/application/v1-0/about-items/equipment-address.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-address.html
@@ -27,13 +27,13 @@
         </legend>
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="willYouStoreAtBusinessAddress" name="willYouStoreAtBusinessAddress" type="radio" value="yes">
+            <input class="govuk-radios__input" id="willYouStoreAtBusinessAddress" name="willYouStoreAtBusinessAddress" type="radio" value="Yes">
             <label class="govuk-label govuk-radios__label" for="willYouStoreAtBusinessAddress">
               Yes, it will be stored at B43 5LP
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="willYouStoreAtBusinessAddress-2" name="willYouStoreAtBusinessAddress" type="radio" value="no">
+            <input class="govuk-radios__input" id="willYouStoreAtBusinessAddress-2" name="willYouStoreAtBusinessAddress" type="radio" value="No">
             <label class="govuk-label govuk-radios__label" for="willYouStoreAtBusinessAddress-2">
               No, at another address
             </label>
