--- a/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
@@ -27,13 +27,13 @@
         </legend>
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="willYouUseForContracting" name="willYouUseForContracting" type="radio" value="yes">
+            <input class="govuk-radios__input" id="willYouUseForContracting" name="willYouUseForContracting" type="radio" value="Yes">
             <label class="govuk-label govuk-radios__label" for="willYouUseForContracting">
               Yes
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="willYouUseForContracting-2" name="willYouUseForContracting" type="radio" value="no">
+            <input class="govuk-radios__input" id="willYouUseForContracting-2" name="willYouUseForContracting" type="radio" value="No">
             <label class="govuk-label govuk-radios__label" for="willYouUseForContracting-2">
               No
             </label>
