Added spacing for uploads

--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -82,7 +82,7 @@ Upload1
 
     </div>
   </div>
-
+ 
 <br><br>
 
 
@@ -97,8 +97,9 @@ Upload1
 
   
 </div>
+<br>
 
-<br><br>
+<hr style="margin: 20px 0;">
 
 {% endif %}
 
@@ -124,7 +125,7 @@ function showVisualEvidenceSection() {
 </script>
 
 
-
+<br><br>
 <body>
 
 <div class="govuk-grid-row">
@@ -238,24 +239,19 @@ function showVisualEvidenceSection() {
           </div>
 
   
-            <button type="submit" class="govuk-button govuk-button--secondary moj-multi-file-upload__button" data-module="govuk-button" onclick="showFilesAddedSection()">
+            <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom: 0;"onclick="showFilesAddedSection()">
               Upload files
             </button>
   
-        
-
-    
-
 </div>
 </div>
+</div>
+
+
+<br>
+
+<hr style="margin: 20px 0;">
 <br><br>
-</div>
-
-
-
-
-
-
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -368,7 +364,7 @@ function showVisualEvidenceSection() {
             </div>
   
     
-              <button type="submit" class="govuk-button govuk-button--secondary moj-multi-file-upload__button" data-module="govuk-button" onclick="showFilesPaymentsSection()">
+              <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom: 0;"onclick="showFilesPaymentsSection()">
                 Upload files
               </button>
     
@@ -382,9 +378,10 @@ function showVisualEvidenceSection() {
 
 
 
+  <br>
 
-
-
+  <hr style="margin: 20px 0;">
+  <br><br>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -497,18 +494,19 @@ function showVisualEvidenceSection() {
               </div>
     
       
-                <button type="submit" class="govuk-button govuk-button--secondary moj-multi-file-upload__button" data-module="govuk-button" onclick="showVisualEvidenceSection()">
+                <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="showVisualEvidenceSection()">
                   Upload files
                 </button>
       
             
         
+               
+    </div>
+    </div>
     
-    </div>
-    </div>
     <br><br>
     </div>
-
+    
 
 
 
