--- a/app/views/fetf/agreement/v1-3/email-agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-3/email-agreement-accepted.html
@@ -162,7 +162,7 @@ items and submit your claim.
 
             <strong>What you need to do</strong><br>
 
-            <p>You need to <a href="/_common/not-testing.html">check what evidence you must provide with your claim</a>.</p>
+            <p>You should read <a href="/_common/not-testing.html">Claim your Farming Equipment and Technology Fund (FETF) 2024 grant payment (opens in new tab)</a>. It explains how to submit a Farming Equipment and Technology Fund claim.</p>
             <p>You need evidence that each item you are claiming for:</p>
             <ul>
               <li>has been purchased (for example, invoices)</li>
@@ -191,8 +191,7 @@ items and submit your claim.
 
             <p>Your application must still be above the minimum grant amount and the score must
             be above the minimum threshold. If you fall below this score, your application will no
-            longer be eligible for funding. (The cut off score for FETF 2023 was 75% and the
-            minimum grant amount was £1,000.)</p>
+            longer be eligible for funding.</p>
 
 
            
