--- a/app/views/fetf/application/v1-0/selected-items.html
+++ b/app/views/fetf/application/v1-0/selected-items.html
@@ -17,7 +17,7 @@
 <table class="govuk-table">
 
 
-  <caption class="govuk-table__caption govuk-table__caption--m">Items summary</caption>
+  <caption class="govuk-table__caption govuk-table__caption--m add-hr" >Items summary</caption>
   <thead class="govuk-table__head">
     <tr class=".govuk-table-row-selected-item">
       <th scope="col" class="govuk-table__header">Item</th>
