Content update to claims

--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -74,7 +74,7 @@ Upload1
         <ul class="govuk-list govuk-list--bullet">
           <li>has been purchased (for example, invoices)</li>
           <li>has been paid for in full (for example, receipts and bank statements – you can cross out other transactions)</li>
-          <li>is in place and opertational (for example, photos, videos)</li>
+          <li>is in place and operational (for example, photos, videos)</li>
         </ul>
       </p>
 
@@ -132,7 +132,7 @@ function showVisualEvidenceSection() {
 <div class="govuk-grid-column-two-thirds">
 
   <p class="govuk-label govuk-label--m">Invoices</p>
-  <p class="govuk-body">For example, invoice or receipts (you can cross out other transactions)</p>
+  <p class="govuk-body">Evidence it has been purchased (for example, invoices)</p>
   <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
 
 
@@ -257,7 +257,7 @@ function showVisualEvidenceSection() {
   <div class="govuk-grid-column-two-thirds">
   
     <p class="govuk-label govuk-label--m">Payments</p>
-    <p class="govuk-body">For example, bank statements (you can cross out other transactions)</p>
+    <p class="govuk-body">Evidence it has been paid for in full (for example, receipts and bank statements — you can cross out other transactions) </p>
   <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
 
   
@@ -387,7 +387,7 @@ function showVisualEvidenceSection() {
     <div class="govuk-grid-column-two-thirds">
     
       <p class="govuk-label govuk-label--m">Visual evidence</p>
-<p class="govuk-body">For example, photos and videos showing the item</p>
+<p class="govuk-body">Evidence it is in place and operational (for example, photos, videos)</p>
 <p class="govuk-body" style="color: #505A5F;">Supported file types are JPG, PNG, PDF, MOV or MP4. Maximum file size is 20MB.</p><br>
     
     
