--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -257,7 +257,7 @@ function showVisualEvidenceSection() {
   <div class="govuk-grid-column-two-thirds">
   
     <p class="govuk-label govuk-label--m">Payments</p>
-    <p class="govuk-body">Evidence it has been paid for in full (for example, receipts and bank statements — you can cross out other transactions) </p>
+    <p class="govuk-body">Evidence it has been paid for in full (for example, receipts and bank statements – you can cross out other transactions) </p>
   <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
 
   
