--- a/app/views/ftf/application/v3-0/login.html
+++ b/app/views/ftf/application/v3-0/login.html
@@ -10,7 +10,7 @@
       Alpha
     </strong>
     <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="/_common/not-testing.html">feedback</a> will help us to improve it.
+      This is a new service – your <a class="govuk-link" href="/ftf/feedback-question">feedback</a> will help us to improve it.
     </span>
   </p>
 </div>
