Contracting routes fixed

--- a/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
@@ -17,7 +17,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/fetf-items-contracting" method="post">
+    <form action="/fetf/fetf-items-contracting" method="post">
 
     <div class="govuk-form-group">
       <span class="govuk-caption-l">Apply</span>
@@ -27,13 +27,13 @@
         </legend>
         <div class="govuk-radios" data-module="govuk-radios">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="willYouUseForContracting" name="willYouUseForContracting" type="radio" value="Yes">
+            <input class="govuk-radios__input" id="willYouUseForContracting" name="for-contracting" type="radio" value="Yes">
             <label class="govuk-label govuk-radios__label" for="willYouUseForContracting">
               Yes
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="willYouUseForContracting-2" name="willYouUseForContracting" type="radio" value="No">
+            <input class="govuk-radios__input" id="willYouUseForContracting-2" name="for-contracting" type="radio" value="No">
             <label class="govuk-label govuk-radios__label" for="willYouUseForContracting-2">
               No
             </label>
