--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -15,7 +15,7 @@
       Alpha
     </strong>
     <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+      This is a new service – your <a class="govuk-link" href="/fetf/feedback-question">feedback</a> will help us to improve it.
     </span>
   </p>
 </div>
